k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: github_copilot_ns
  labels:
    name: github_copilot_ns
    environment: production
